[project]
name = "lesson-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.5",
    "langchain-google-genai",
    "langchain-openai",
    "langchain-anthropic",
    "langchain-ollama",
    "python-dotenv>=1.1.1",
    "gradio>=5.46.1",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "faiss-cpu>=1.7.4",
    "onnxruntime>=1.16.0,<1.23.0",
    "chromadb>=1.2.1",
    "langchain-community>=0.3.31",
    "ipywidgets>=8.1.7",
    "sentence-transformers>=5.1.2",
    "langchain-chroma>=0.2.6",
    "langchain-huggingface>=0.3.1",
]
